docs/edge-stack/1.9/libraries.md
The Go module "github.com/datawire/apro" incorporates the following Free
and Open Source software:

    Name                                                                  Version                                             License(s)
    ----                                                                  -------                                             ----------
    the Go language standard library ("std")                              v1.15                                               3-clause BSD license
    cloud.google.com/go                                                   v0.38.0                                             Apache License 2.0
    github.com/Azure/go-ansiterm                                          v0.0.0-20170929234023-d6e3b3328b78                  MIT license
    github.com/Azure/go-autorest/autorest                                 v0.9.0                                              Apache License 2.0
    github.com/Azure/go-autorest/autorest/adal                            v0.5.0                                              Apache License 2.0
    github.com/Azure/go-autorest/autorest/date                            v0.1.0                                              Apache License 2.0
    github.com/Azure/go-autorest/logger                                   v0.1.0                                              Apache License 2.0
    github.com/Azure/go-autorest/tracing                                  v0.5.0                                              Apache License 2.0
    github.com/Jeffail/gabs                                               v1.2.0                                              MIT license
    github.com/MakeNowJust/heredoc                                        v0.0.0-20170808103936-bb23615498cd                  MIT license
    github.com/Masterminds/semver                                         v1.4.2                                              MIT license
    github.com/Masterminds/sprig                                          v2.17.1+incompatible                                MIT license
    github.com/PuerkitoBio/purell                                         v1.1.1                                              3-clause BSD license
    github.com/PuerkitoBio/urlesc                                         v0.0.0-20170810143723-de5bf2ad4578                  3-clause BSD license
    github.com/aclements/go-moremath                                      v0.0.0-20180329182055-b1aff36309c7                  3-clause BSD license
    github.com/aead/chacha20                                              v0.0.0-20180709150244-8b13a72661da                  MIT license
    github.com/aead/chacha20poly1305                                      v0.0.0-20170617001512-233f39982aeb                  MIT license
    github.com/aead/poly1305                                              v0.0.0-20180717145839-3fee0db0b635                  MIT license
    github.com/aokoli/goutils                                             v1.1.0                                              Apache License 2.0
    github.com/armon/go-metrics                                           v0.0.0-20180917152333-f0300d1749da                  MIT license
    github.com/asaskevich/govalidator                                     v0.0.0-20200428143746-21a406dcc535                  MIT license
    github.com/aws/aws-sdk-go                                             v1.28.2                                             Apache License 2.0
    github.com/beorn7/perks                                               v1.0.1                                              MIT license
    github.com/blang/semver                                               v3.5.0+incompatible                                 MIT license
    github.com/cenkalti/backoff/v3                                        v3.0.0                                              MIT license
    github.com/cespare/xxhash/v2                                          v2.1.1                                              MIT license
    github.com/cncf/udpa/go                                               v0.0.0-20200629203442-efcf912fb354                  Apache License 2.0
    github.com/datawire/ambassador                                        (modified)                                          Apache License 2.0
    github.com/datawire/lrucache                                          v0.0.0-20200807215921-33aebc31d759                  Apache License 2.0
    github.com/davecgh/go-spew                                            v1.1.1                                              ISC license
    github.com/dgrijalva/jwt-go                                           v3.2.0+incompatible                                 MIT license
    github.com/docker/docker                                              v1.4.2-0.20200203170920-46ec8731fbce                Apache License 2.0
    github.com/docker/spdystream                                          v0.0.0-20160310174837-449fdfce4d96                  Apache License 2.0
    github.com/emicklei/go-restful                                        v2.9.5+incompatible                                 MIT license
    github.com/emirpasic/gods                                             v1.12.0                                             2-clause BSD license, ISC license
    github.com/envoyproxy/protoc-gen-validate                             v0.3.0-java.0.20200609174644-bd816e4522c1           Apache License 2.0
    github.com/evanphx/json-patch                                         v4.5.0+incompatible                                 3-clause BSD license
    github.com/exponent-io/jsonpath                                       v0.0.0-20151013193312-d6023ce2651d                  MIT license
    github.com/fatih/camelcase                                            v1.0.0                                              MIT license
    github.com/felixge/httpsnoop                                          v1.0.1                                              MIT license
    github.com/fsnotify/fsnotify                                          v1.4.9                                              3-clause BSD license
    github.com/ghodss/yaml                                                v1.0.0                                              3-clause BSD license, MIT license
    github.com/go-acme/lego/v3                                            v3.1.0                                              MIT license
    github.com/go-logr/logr                                               v0.1.0                                              Apache License 2.0
    github.com/go-openapi/analysis                                        v0.19.5                                             Apache License 2.0
    github.com/go-openapi/errors                                          v0.19.2                                             Apache License 2.0
    github.com/go-openapi/jsonpointer                                     v0.19.3                                             Apache License 2.0
    github.com/go-openapi/jsonreference                                   v0.19.3                                             Apache License 2.0
    github.com/go-openapi/loads                                           v0.19.4                                             Apache License 2.0
    github.com/go-openapi/runtime                                         v0.19.4                                             Apache License 2.0
    github.com/go-openapi/spec                                            v0.19.3                                             Apache License 2.0
    github.com/go-openapi/strfmt                                          v0.19.3                                             Apache License 2.0
    github.com/go-openapi/swag                                            v0.19.5                                             Apache License 2.0
    github.com/go-openapi/validate                                        v0.19.5                                             Apache License 2.0
    github.com/go-stack/stack                                             v1.8.0                                              MIT license
    github.com/gobwas/glob                                                v0.2.3                                              MIT license
    github.com/gogo/protobuf                                              v1.3.1                                              3-clause BSD license
    github.com/golang-migrate/migrate/v4                                  v4.8.0                                              MIT license
    github.com/golang/groupcache                                          v0.0.0-20190702054246-869f871628b6                  Apache License 2.0
    github.com/golang/mock                                                v1.4.1                                              Apache License 2.0
    github.com/golang/protobuf                                            v1.4.2                                              3-clause BSD license
    github.com/google/btree                                               v1.0.0                                              Apache License 2.0
    github.com/google/go-cmp                                              v0.4.0                                              3-clause BSD license
    github.com/google/gofuzz                                              v1.1.0                                              Apache License 2.0
    github.com/google/shlex                                               v0.0.0-20181106134648-c34317bd91bf                  Apache License 2.0
    github.com/google/uuid                                                v1.1.1                                              3-clause BSD license
    github.com/googleapis/gnostic                                         v0.3.1                                              Apache License 2.0
    github.com/gophercloud/gophercloud                                    v0.3.0                                              Apache License 2.0
    github.com/gorilla/handlers                                           v1.5.1                                              2-clause BSD license
    github.com/gorilla/mux                                                v1.7.3                                              3-clause BSD license
    github.com/gregjones/httpcache                                        v0.0.0-20190611155906-901d90724c79                  MIT license
    github.com/hashicorp/consul/api                                       v1.3.0                                              Mozilla Public License 2.0
    github.com/hashicorp/errwrap                                          v1.0.0                                              Mozilla Public License 2.0
    github.com/hashicorp/go-cleanhttp                                     v0.5.1                                              Mozilla Public License 2.0
    github.com/hashicorp/go-immutable-radix                               v1.0.0                                              Mozilla Public License 2.0
    github.com/hashicorp/go-multierror                                    v1.0.0                                              Mozilla Public License 2.0
    github.com/hashicorp/go-rootcerts                                     v1.0.0                                              Mozilla Public License 2.0
    github.com/hashicorp/golang-lru                                       v0.5.4                                              Mozilla Public License 2.0
    github.com/hashicorp/serf                                             v0.8.2                                              Mozilla Public License 2.0
    github.com/huandu/xstrings                                            v1.3.1                                              MIT license
    github.com/imdario/mergo                                              v0.3.9                                              3-clause BSD license
    github.com/inconshreveable/mousetrap                                  v1.0.0                                              Apache License 2.0
    github.com/influxdata/tdigest                                         v0.0.0-20181121200506-bf2b5ad3c0a9                  Apache License 2.0
    github.com/jackc/pgx                                                  v3.6.2+incompatible                                 MIT license
    github.com/jbenet/go-context                                          v0.0.0-20150711004518-d14ea06fba99                  MIT license
    github.com/jcuga/golongpoll                                           v0.0.0-20180711123949-939e3befd837                  MIT license
    github.com/jmespath/go-jmespath                                       v0.0.0-20180206201540-c2b33e8439af                  Apache License 2.0
    github.com/jpillora/backoff                                           v1.0.0                                              MIT license
    github.com/json-iterator/go                                           v1.1.10                                             MIT license
    github.com/kavu/go_reuseport                                          v1.2.0                                              MIT license
    github.com/kelseyhightower/envconfig                                  v1.1.0                                              MIT license
    github.com/kevinburke/ssh_config                                      v0.0.0-20190725054713-01f96b0aa0cd                  MIT license
    github.com/klauspost/cpuid                                            v1.2.0                                              MIT license
    github.com/konsorten/go-windows-terminal-sequences                    v1.0.3                                              MIT license
    github.com/lestrrat-go/iter                                           v0.0.0-20200422075355-fc1769541911                  MIT license
    github.com/lestrrat-go/jwx                                            v1.0.2                                              MIT license
    github.com/lib/pq                                                     v1.7.0                                              MIT license
    github.com/liggitt/tabwriter                                          v0.0.0-20181228230101-89fcab3d43de                  3-clause BSD license
    github.com/lyft/goruntime                                             v0.1.8                                              Apache License 2.0
    github.com/lyft/gostats                                               v0.2.6                                              Apache License 2.0
    github.com/lyft/ratelimit                                             (modified)                                          Apache License 2.0
    github.com/mailru/easyjson                                            v0.7.0                                              MIT license
    github.com/matttproud/golang_protobuf_extensions                      v1.0.1                                              Apache License 2.0
    github.com/mediocregopher/radix.v2                                    v0.0.0-20180603022615-94360be26253                  MIT license
    github.com/mholt/certmagic                                            v0.8.3                                              Apache License 2.0
    github.com/miekg/dns                                                  v1.1.15                                             3-clause BSD license
    github.com/mitchellh/go-homedir                                       v1.1.0                                              MIT license
    github.com/mitchellh/go-wordwrap                                      v1.0.0                                              MIT license
    github.com/mitchellh/mapstructure                                     v1.1.2                                              MIT license
    github.com/modern-go/concurrent                                       v0.0.0-20180306012644-bacd9c7ef1dd                  Apache License 2.0
    github.com/modern-go/reflect2                                         v1.0.1                                              Apache License 2.0
    github.com/nu7hatch/gouuid                                            v0.0.0-20131221200532-179d4d0c4d8d                  MIT license
    github.com/o1egl/paseto                                               v1.0.0                                              MIT license
    github.com/onsi/gomega                                                v1.10.1                                             MIT license
    github.com/oxtoacart/bpool                                            v0.0.0-20190530202638-03653db5a59c                  Apache License 2.0
    github.com/peterbourgon/diskv                                         v2.0.1+incompatible                                 MIT license
    github.com/pkg/errors                                                 v0.9.1                                              2-clause BSD license
    github.com/pmezard/go-difflib                                         v1.0.0                                              3-clause BSD license
    github.com/prometheus/client_golang                                   v1.7.1                                              Apache License 2.0
    github.com/prometheus/client_model                                    v0.2.0                                              Apache License 2.0
    github.com/prometheus/common                                          v0.10.0                                             Apache License 2.0
    github.com/prometheus/procfs                                          v0.1.3                                              Apache License 2.0
    github.com/russross/blackfriday                                       v1.5.2                                              2-clause BSD license
    github.com/russross/blackfriday/v2                                    v2.0.1                                              2-clause BSD license
    github.com/sergi/go-diff                                              v1.0.0                                              MIT license
    github.com/shurcooL/sanitized_anchor_name                             v1.0.0                                              MIT license
    github.com/sirupsen/logrus                                            v1.6.0                                              MIT license
    github.com/spf13/cobra                                                v1.0.0                                              Apache License 2.0
    github.com/spf13/pflag                                                v1.0.5                                              3-clause BSD license
    github.com/src-d/gcfg                                                 v1.4.0                                              3-clause BSD license
    github.com/stretchr/testify                                           v1.6.1                                              MIT license
    github.com/datawire/vegeta (modified from github.com/tsenart/vegeta)  v12.2.2-0.20190408190644-d94b721fc676+incompatible  MIT license
    github.com/xanzy/ssh-agent                                            v0.2.1                                              Apache License 2.0
    go.mongodb.org/mongo-driver                                           v1.1.2                                              Apache License 2.0
    golang.org/x/crypto                                                   v0.0.0-20200622213623-75b288015ac9                  3-clause BSD license
    golang.org/x/net                                                      v0.0.0-20200520004742-59133d7f0dd7                  3-clause BSD license
    golang.org/x/oauth2                                                   v0.0.0-20190604053449-0f29369cfe45                  3-clause BSD license
    golang.org/x/sync                                                     v0.0.0-20190911185100-cd5d95a43a6e                  3-clause BSD license
    golang.org/x/sys                                                      v0.0.0-20200615200032-f1bc736245b1                  3-clause BSD license
    golang.org/x/text                                                     v0.3.3                                              3-clause BSD license
    golang.org/x/time                                                     v0.0.0-20191024005414-555d28b269f0                  3-clause BSD license
    golang.org/x/tools                                                    v0.0.0-20200522201501-cb1345f3a375                  3-clause BSD license
    golang.org/x/xerrors                                                  v0.0.0-20191204190536-9bdfabe68543                  3-clause BSD license
    google.golang.org/appengine                                           v1.6.5                                              Apache License 2.0
    google.golang.org/genproto                                            v0.0.0-20200115191322-ca5a22157cba                  Apache License 2.0
    google.golang.org/grpc                                                v1.29.1                                             Apache License 2.0
    google.golang.org/protobuf                                            v1.23.0                                             3-clause BSD license
    gopkg.in/inf.v0                                                       v0.9.1                                              3-clause BSD license
    gopkg.in/square/go-jose.v2                                            v2.3.1                                              3-clause BSD license, Apache License 2.0
    gopkg.in/src-d/go-billy.v4                                            v4.3.2                                              Apache License 2.0
    gopkg.in/src-d/go-git.v4                                              v4.13.1                                             Apache License 2.0
    gopkg.in/warnings.v0                                                  v0.1.2                                              2-clause BSD license
    gopkg.in/yaml.v2                                                      v2.3.0                                              Apache License 2.0, MIT license
    gopkg.in/yaml.v3                                                      v3.0.0-20200313102051-9f266ea9e77c                  Apache License 2.0, MIT license
    k8s.io/api                                                            v0.18.4                                             Apache License 2.0
    k8s.io/apiextensions-apiserver                                        v0.18.4                                             Apache License 2.0
    k8s.io/apimachinery                                                   v0.18.4                                             Apache License 2.0
    k8s.io/apiserver                                                      v0.18.4                                             Apache License 2.0
    k8s.io/cli-runtime                                                    v0.18.4                                             Apache License 2.0
    k8s.io/client-go                                                      v0.18.4                                             Apache License 2.0
    k8s.io/component-base                                                 v0.18.4                                             Apache License 2.0
    k8s.io/klog                                                           v1.0.0                                              Apache License 2.0
    k8s.io/klog/v2                                                        v2.0.0                                              Apache License 2.0
    k8s.io/kube-openapi                                                   v0.0.0-20200410145947-61e04a5be9a6                  Apache License 2.0
    k8s.io/kubectl                                                        v0.18.4                                             Apache License 2.0
    k8s.io/metrics                                                        v0.18.4                                             Apache License 2.0
    k8s.io/utils                                                          v0.0.0-20200603063816-c1c6865ac451                  Apache License 2.0
    sigs.k8s.io/apiserver-network-proxy/konnectivity-client               v0.0.7                                              Apache License 2.0
    sigs.k8s.io/controller-runtime                                        v0.6.1                                              Apache License 2.0
    sigs.k8s.io/kustomize                                                 v2.0.3+incompatible                                 Apache License 2.0
    sigs.k8s.io/structured-merge-diff/v3                                  v3.0.0                                              Apache License 2.0
    sigs.k8s.io/yaml                                                      v1.2.0                                              3-clause BSD license, MIT license

The Go module "github.com/datawire/ambassador" incorporates the following
Free and Open Source software:

    Name                                                     Version                                    License(s)
    ----                                                     -------                                    ----------
    the Go language standard library ("std")                 v1.15                                      3-clause BSD license
    cloud.google.com/go                                      v0.38.0                                    Apache License 2.0
    git.lukeshu.com/go/libsystemd                            v0.5.3                                     Apache License 2.0
    github.com/Azure/go-ansiterm                             v0.0.0-20170929234023-d6e3b3328b78         MIT license
    github.com/Azure/go-autorest/autorest                    v0.9.0                                     Apache License 2.0
    github.com/Azure/go-autorest/autorest/adal               v0.5.0                                     Apache License 2.0
    github.com/Azure/go-autorest/autorest/date               v0.1.0                                     Apache License 2.0
    github.com/Azure/go-autorest/logger                      v0.1.0                                     Apache License 2.0
    github.com/Azure/go-autorest/tracing                     v0.5.0                                     Apache License 2.0
    github.com/BurntSushi/toml                               v0.3.1                                     MIT license
    github.com/MakeNowJust/heredoc                           v0.0.0-20170808103936-bb23615498cd         MIT license
    github.com/Masterminds/goutils                           v1.1.0                                     Apache License 2.0
    github.com/Masterminds/semver                            v1.4.2                                     MIT license
    github.com/Masterminds/semver/v3                         v3.1.0                                     MIT license
    github.com/Masterminds/sprig                             v2.17.1+incompatible                       MIT license
    github.com/Masterminds/sprig/v3                          v3.1.0                                     MIT license
    github.com/Masterminds/squirrel                          v1.4.0                                     MIT license
    github.com/Microsoft/go-winio                            v0.4.15-0.20190919025122-fc70bd9a86b5      MIT license
    github.com/Microsoft/hcsshim                             v0.8.7                                     MIT license
    github.com/PuerkitoBio/purell                            v1.1.1                                     3-clause BSD license
    github.com/PuerkitoBio/urlesc                            v0.0.0-20170810143723-de5bf2ad4578         3-clause BSD license
    github.com/andybalholm/brotli                            v0.0.0-20190621154722-5f990b63d2d6         MIT license
    github.com/aokoli/goutils                                v1.1.0                                     Apache License 2.0
    github.com/armon/go-metrics                              v0.0.0-20180917152333-f0300d1749da         MIT license
    github.com/asaskevich/govalidator                        v0.0.0-20200428143746-21a406dcc535         MIT license
    github.com/beorn7/perks                                  v1.0.1                                     MIT license
    github.com/blang/semver                                  v3.5.0+incompatible                        MIT license
    github.com/census-instrumentation/opencensus-proto       v0.2.1                                     Apache License 2.0
    github.com/cespare/xxhash/v2                             v2.1.1                                     MIT license
    github.com/cncf/udpa/go                                  v0.0.0-20200629203442-efcf912fb354         Apache License 2.0
    github.com/containerd/cgroups                            v0.0.0-20190919134610-bf292b21730f         Apache License 2.0
    github.com/containerd/containerd                         v1.3.4                                     Apache License 2.0
    github.com/cyphar/filepath-securejoin                    v0.2.2                                     3-clause BSD license
    github.com/datawire/pf                                   v0.0.0-20180510150411-31a823f9495a         2-clause BSD license
    github.com/davecgh/go-spew                               v1.1.1                                     ISC license
    github.com/deislabs/oras                                 v0.8.1                                     MIT license
    github.com/dgrijalva/jwt-go                              v3.2.0+incompatible                        MIT license
    github.com/docker/cli                                    v0.0.0-20200130152716-5d0cf8839492         Apache License 2.0
    github.com/docker/distribution                           v2.7.1+incompatible                        Apache License 2.0
    github.com/docker/docker                                 v1.4.2-0.20200203170920-46ec8731fbce       Apache License 2.0
    github.com/docker/docker-credential-helpers              v0.6.3                                     MIT license
    github.com/docker/go-connections                         v0.4.0                                     Apache License 2.0
    github.com/docker/go-metrics                             v0.0.0-20180209012529-399ea8c73916         Apache License 2.0
    github.com/docker/go-units                               v0.4.0                                     Apache License 2.0
    github.com/docker/spdystream                             v0.0.0-20160310174837-449fdfce4d96         Apache License 2.0
    github.com/dsnet/compress                                v0.0.1                                     3-clause BSD license
    github.com/ecodia/golang-awaitility                      v0.0.0-20180710094957-fb55e59708c7         MIT license
    github.com/emicklei/go-restful                           v2.9.5+incompatible                        MIT license
    github.com/envoyproxy/protoc-gen-validate                v0.3.0-java.0.20200609174644-bd816e4522c1  Apache License 2.0
    github.com/evanphx/json-patch                            v4.5.0+incompatible                        3-clause BSD license
    github.com/exponent-io/jsonpath                          v0.0.0-20151013193312-d6023ce2651d         MIT license
    github.com/fatih/camelcase                               v1.0.0                                     MIT license
    github.com/fatih/color                                   v1.7.0                                     MIT license
    github.com/fsnotify/fsnotify                             v1.4.9                                     3-clause BSD license
    github.com/ghodss/yaml                                   v1.0.0                                     3-clause BSD license, MIT license
    github.com/go-logr/logr                                  v0.1.0                                     Apache License 2.0
    github.com/go-openapi/analysis                           v0.19.5                                    Apache License 2.0
    github.com/go-openapi/errors                             v0.19.2                                    Apache License 2.0
    github.com/go-openapi/jsonpointer                        v0.19.3                                    Apache License 2.0
    github.com/go-openapi/jsonreference                      v0.19.3                                    Apache License 2.0
    github.com/go-openapi/loads                              v0.19.4                                    Apache License 2.0
    github.com/go-openapi/runtime                            v0.19.4                                    Apache License 2.0
    github.com/go-openapi/spec                               v0.19.3                                    Apache License 2.0
    github.com/go-openapi/strfmt                             v0.19.3                                    Apache License 2.0
    github.com/go-openapi/swag                               v0.19.5                                    Apache License 2.0
    github.com/go-openapi/validate                           v0.19.5                                    Apache License 2.0
    github.com/go-stack/stack                                v1.8.0                                     MIT license
    github.com/gobuffalo/flect                               v0.2.0                                     MIT license
    github.com/gobwas/glob                                   v0.2.3                                     MIT license
    github.com/gogo/protobuf                                 v1.3.1                                     3-clause BSD license
    github.com/golang/gddo                                   v0.0.0-20190419222130-af0f2af80721         3-clause BSD license
    github.com/golang/groupcache                             v0.0.0-20190702054246-869f871628b6         Apache License 2.0
    github.com/golang/protobuf                               v1.4.2                                     3-clause BSD license
    github.com/golang/snappy                                 v0.0.1                                     3-clause BSD license
    github.com/google/btree                                  v1.0.0                                     Apache License 2.0
    github.com/google/go-cmp                                 v0.4.0                                     3-clause BSD license
    github.com/google/gofuzz                                 v1.1.0                                     Apache License 2.0
    github.com/google/shlex                                  v0.0.0-20181106134648-c34317bd91bf         Apache License 2.0
    github.com/google/uuid                                   v1.1.1                                     3-clause BSD license
    github.com/googleapis/gnostic                            v0.3.1                                     Apache License 2.0
    github.com/gookit/color                                  v1.2.3                                     MIT license
    github.com/gophercloud/gophercloud                       v0.1.0                                     Apache License 2.0
    github.com/gorilla/mux                                   v1.7.3                                     3-clause BSD license
    github.com/gorilla/websocket                             v1.4.1                                     2-clause BSD license
    github.com/gosuri/uitable                                v0.0.4                                     MIT license
    github.com/gregjones/httpcache                           v0.0.0-20180305231024-9cad4c3443a7         MIT license
    github.com/hashicorp/consul/api                          v1.3.0                                     Mozilla Public License 2.0
    github.com/hashicorp/go-cleanhttp                        v0.5.1                                     Mozilla Public License 2.0
    github.com/hashicorp/go-immutable-radix                  v1.0.0                                     Mozilla Public License 2.0
    github.com/hashicorp/go-rootcerts                        v1.0.0                                     Mozilla Public License 2.0
    github.com/hashicorp/golang-lru                          v0.5.4                                     Mozilla Public License 2.0
    github.com/hashicorp/serf                                v0.8.2                                     Mozilla Public License 2.0
    github.com/huandu/xstrings                               v1.3.1                                     MIT license
    github.com/imdario/mergo                                 v0.3.9                                     3-clause BSD license
    github.com/inconshreveable/mousetrap                     v1.0.0                                     Apache License 2.0
    github.com/jmoiron/sqlx                                  v1.2.0                                     MIT license
    github.com/json-iterator/go                              v1.1.10                                    MIT license
    github.com/kballard/go-shellquote                        v0.0.0-20180428030007-95032a82bc51         MIT license
    github.com/klauspost/compress                            v1.9.2                                     3-clause BSD license, MIT license
    github.com/klauspost/pgzip                               v1.2.1                                     MIT license
    github.com/konsorten/go-windows-terminal-sequences       v1.0.3                                     MIT license
    github.com/lann/builder                                  v0.0.0-20180802200727-47ae307949d0         MIT license
    github.com/lann/ps                                       v0.0.0-20150810152359-62de8c46ede0         MIT license
    github.com/lib/pq                                        v1.7.0                                     MIT license
    github.com/liggitt/tabwriter                             v0.0.0-20181228230101-89fcab3d43de         3-clause BSD license
    github.com/mailru/easyjson                               v0.7.0                                     MIT license
    github.com/mattn/go-colorable                            v0.1.2                                     MIT license
    github.com/mattn/go-isatty                               v0.0.8                                     MIT license
    github.com/mattn/go-runewidth                            v0.0.4                                     MIT license
    github.com/matttproud/golang_protobuf_extensions         v1.0.1                                     Apache License 2.0
    github.com/mholt/archiver/v3                             v3.3.0                                     MIT license
    github.com/miekg/dns                                     v1.1.6                                     3-clause BSD license
    github.com/mitchellh/copystructure                       v1.0.0                                     MIT license
    github.com/mitchellh/go-homedir                          v1.1.0                                     MIT license
    github.com/mitchellh/go-wordwrap                         v1.0.0                                     MIT license
    github.com/mitchellh/mapstructure                        v1.1.2                                     MIT license
    github.com/mitchellh/reflectwalk                         v1.0.0                                     MIT license
    github.com/modern-go/concurrent                          v0.0.0-20180306012644-bacd9c7ef1dd         Apache License 2.0
    github.com/modern-go/reflect2                            v1.0.1                                     Apache License 2.0
    github.com/morikuni/aec                                  v1.0.0                                     MIT license
    github.com/nwaples/rardecode                             v1.0.0                                     2-clause BSD license
    github.com/opencontainers/go-digest                      v1.0.0                                     Apache License 2.0
    github.com/opencontainers/image-spec                     v1.0.1                                     Apache License 2.0
    github.com/opencontainers/runc                           v0.1.1                                     Apache License 2.0
    github.com/peterbourgon/diskv                            v2.0.1+incompatible                        MIT license
    github.com/pierrec/lz4                                   v2.0.5+incompatible                        3-clause BSD license
    github.com/pkg/browser                                   v0.0.0-20180916011732-0a3d74bf9ce4         2-clause BSD license
    github.com/pkg/errors                                    v0.9.1                                     2-clause BSD license
    github.com/pmezard/go-difflib                            v1.0.0                                     3-clause BSD license
    github.com/prometheus/client_golang                      v1.6.0                                     Apache License 2.0
    github.com/prometheus/client_model                       v0.2.0                                     Apache License 2.0
    github.com/prometheus/common                             v0.9.1                                     Apache License 2.0
    github.com/prometheus/procfs                             v0.0.11                                    Apache License 2.0
    github.com/rubenv/sql-migrate                            v0.0.0-20200616145509-8d140a17f351         MIT license
    github.com/russross/blackfriday                          v1.5.2                                     2-clause BSD license
    github.com/sirupsen/logrus                               v1.6.0                                     MIT license
    github.com/spf13/cast                                    v1.3.1                                     MIT license
    github.com/spf13/cobra                                   v1.0.0                                     Apache License 2.0
    github.com/spf13/pflag                                   v1.0.5                                     3-clause BSD license
    github.com/stretchr/testify                              v1.6.1                                     MIT license
    github.com/ulikunitz/xz                                  v0.5.6                                     3-clause BSD license
    github.com/xeipuuv/gojsonpointer                         v0.0.0-20180127040702-4e3ac2762d5f         Apache License 2.0
    github.com/xeipuuv/gojsonreference                       v0.0.0-20180127040603-bd5ef7bd5415         Apache License 2.0
    github.com/xeipuuv/gojsonschema                          v1.2.0                                     Apache License 2.0
    github.com/xi2/xz                                        v0.0.0-20171230120015-48954b6210f8         public domain
    go.mongodb.org/mongo-driver                              v1.1.2                                     Apache License 2.0
    go.opencensus.io                                         v0.22.2                                    Apache License 2.0
    golang.org/x/crypto                                      v0.0.0-20200622213623-75b288015ac9         3-clause BSD license
    golang.org/x/net                                         v0.0.0-20200520004742-59133d7f0dd7         3-clause BSD license
    golang.org/x/oauth2                                      v0.0.0-20190604053449-0f29369cfe45         3-clause BSD license
    golang.org/x/sync                                        v0.0.0-20190911185100-cd5d95a43a6e         3-clause BSD license
    golang.org/x/sys                                         v0.0.0-20200615200032-f1bc736245b1         3-clause BSD license
    golang.org/x/text                                        v0.3.3                                     3-clause BSD license
    golang.org/x/time                                        v0.0.0-20191024005414-555d28b269f0         3-clause BSD license
    golang.org/x/tools                                       v0.0.0-20200522201501-cb1345f3a375         3-clause BSD license
    golang.org/x/xerrors                                     v0.0.0-20191204190536-9bdfabe68543         3-clause BSD license
    google.golang.org/appengine                              v1.6.5                                     Apache License 2.0
    google.golang.org/genproto                               v0.0.0-20200115191322-ca5a22157cba         Apache License 2.0
    google.golang.org/grpc                                   v1.29.1                                    Apache License 2.0
    google.golang.org/protobuf                               v1.23.0                                    3-clause BSD license
    gopkg.in/gorp.v1                                         v1.7.2                                     MIT license
    gopkg.in/inf.v0                                          v0.9.1                                     3-clause BSD license
    gopkg.in/natefinch/lumberjack.v2                         v2.0.0                                     MIT license
    gopkg.in/yaml.v2                                         v2.3.0                                     Apache License 2.0, MIT license
    gopkg.in/yaml.v3                                         v3.0.0-20200313102051-9f266ea9e77c         Apache License 2.0, MIT license
    helm.sh/helm/v3                                          v3.2.4                                     Apache License 2.0
    k8s.io/api                                               v0.18.4                                    Apache License 2.0
    k8s.io/apiextensions-apiserver                           v0.18.4                                    Apache License 2.0
    k8s.io/apimachinery                                      v0.18.4                                    Apache License 2.0
    k8s.io/apiserver                                         v0.18.4                                    Apache License 2.0
    k8s.io/cli-runtime                                       v0.18.4                                    Apache License 2.0
    k8s.io/client-go                                         v0.18.4                                    Apache License 2.0
    k8s.io/component-base                                    v0.18.4                                    Apache License 2.0
    k8s.io/helm                                              v2.16.9+incompatible                       Apache License 2.0
    k8s.io/klog                                              v1.0.0                                     Apache License 2.0
    k8s.io/klog/v2                                           v2.0.0                                     Apache License 2.0
    k8s.io/kube-openapi                                      v0.0.0-20200410145947-61e04a5be9a6         Apache License 2.0
    k8s.io/kubectl                                           v0.18.4                                    Apache License 2.0
    k8s.io/metrics                                           v0.18.4                                    Apache License 2.0
    k8s.io/utils                                             v0.0.0-20200603063816-c1c6865ac451         Apache License 2.0
    sigs.k8s.io/apiserver-network-proxy/konnectivity-client  v0.0.7                                     Apache License 2.0
    sigs.k8s.io/controller-runtime                           v0.6.1                                     Apache License 2.0
    sigs.k8s.io/controller-tools                             v0.3.1-0.20200517180335-820a4a27ea84       Apache License 2.0
    sigs.k8s.io/kustomize                                    v2.0.3+incompatible                        Apache License 2.0
    sigs.k8s.io/structured-merge-diff/v3                     v3.0.0                                     Apache License 2.0
    sigs.k8s.io/yaml                                         v1.2.0                                     3-clause BSD license, MIT license

The Ambassador Python code makes use of the following Free and Open Source
libraries:

    Name               Version    License(s)
    ----               -------    ----------
    CacheControl       0.12.6     Apache License 2.0
    Cython             0.29.19    Apache License 2.0
    Flask              1.1.2      3-clause BSD license
    GitPython          3.1.11     3-clause BSD license
    Jinja2             2.11.2     3-clause BSD license
    MarkupSafe         1.1.1      3-clause BSD license
    PyJWT              1.7.1      MIT license
    PyYAML             5.3.1      MIT license
    Werkzeug           1.0.1      3-clause BSD license
    adal               1.2.5      MIT license
    appdirs            1.4.4      MIT license
    attrs              19.3.0     MIT license
    cachetools         4.1.1      MIT license
    certifi            2020.6.20  Mozilla Public License 2.0
    cffi               1.14.3     MIT license
    chardet            3.0.4      GNU Lesser General Public License Version 2.1
    click              7.1.2      3-clause BSD license
    clize              4.1.1      MIT license
    colorama           0.4.3      3-clause BSD license
    contextlib2        0.6.0      Python Software Foundation license
    coverage           5.3        Apache License 2.0
    cryptography       3.2        Apache License 2.0
    decorator          4.4.2      2-clause BSD license
    distlib            0.3.0      Python Software Foundation license
    distro             1.5.0      Apache License 2.0
    docopt             0.6.2      MIT license
    docutils           0.16       2-clause BSD license, GNU General Public License Version 3, Python Software Foundation license, public domain
    dpath              2.0.1      MIT license
    durationpy         0.5        MIT license
    expiringdict       1.2.1      Apache License 2.0
    gitdb              4.0.5      3-clause BSD license
    google-auth        1.23.0     Apache License 2.0
    gunicorn           20.0.4     MIT license
    html5lib           1.0.1      MIT license
    idna               2.7        3-clause BSD license, Python Software Foundation license, Unicode License Agreement for Data Files and Software (2015)
    iniconfig          1.1.1      MIT license
    itsdangerous       1.1.0      3-clause BSD license
    jsonpatch          1.26       3-clause BSD license
    jsonpointer        2.0        3-clause BSD license
    jsonschema         3.2.0      MIT license
    jwt                1.1.0      Apache License 2.0
    k8s-proto          0.0.3      Apache License 2.0
    kubernetes         8.0.0      Apache License 2.0
    lockfile           0.12.2     MIT license
    msgpack            1.0.0      Apache License 2.0
    mypy               0.790      MIT license
    mypy-extensions    0.4.3      MIT license
    oauthlib           3.1.0      3-clause BSD license
    od                 1.0        MIT license
    ordered-set        4.0.1      MIT license
    packaging          20.4       2-clause BSD license, Apache License 2.0
    pep517             0.8.2      MIT license
    pexpect            4.8.0      ISC license
    pip-tools          5.3.1      3-clause BSD license
    pluggy             0.13.1     MIT license
    progress           1.5        ISC license
    prometheus-client  0.8.0      Apache License 2.0
    protobuf           3.13.0     3-clause BSD license
    ptyprocess         0.6.0      ISC license
    py                 1.9.0      MIT license
    pyasn1             0.4.8      2-clause BSD license
    pyasn1-modules     0.2.8      2-clause BSD license
    pycparser          2.20       3-clause BSD license
    pyparsing          2.4.7      MIT license
    pyrsistent         0.17.3     MIT license
    pytest             6.1.2      MIT license
    pytest-cov         2.10.1     MIT license
    python-dateutil    2.8.1      3-clause BSD license, Apache License 2.0
    pytoml             0.1.21     MIT license
    requests           2.20.1     Apache License 2.0
    requests-oauthlib  1.3.0      ISC license
    retry              0.9.2      Apache License 2.0
    retrying           1.3.3      Apache License 2.0
    rsa                4.6        Apache License 2.0
    scout.py           0.5.0      Apache License 2.0
    semantic-version   2.8.5      2-clause BSD license
    sigtools           2.0.2      MIT license
    six                1.15.0     MIT license
    smmap              3.0.4      3-clause BSD license
    toml               0.10.2     MIT license
    typed-ast          1.4.1      Apache License 2.0
    typing-extensions  3.7.4.3    Python Software Foundation license
    urllib3            1.24.3     MIT license
    webencodings       0.5.1      3-clause BSD license
    websocket-client   0.57.0     3-clause BSD license
